# fileshare

./: .env  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yaml  flake.nix  nix.shell  sonar-project.properties  test_connection.rs  todo.txt
.sqlx/: query-032a57b52563b37edf677f18575ab8b71619e2d9eddbc97b51bf157e350cc0a2.json  query-06162cd0f5405424ac4d3d80e699e02013fa0dc1c8acc49ad672aa0b4ab2a08e.json  query-087e6d8a936254a2463c4850b13e9431d024105a265b7413e04f344a915a48e5.json  query-16299cc220f757be65e1ab897446d06a90a63894a5e79958f4df14a5e9342af5.json  query-361f4f54b9de1d056dacd045ee767fa7504f809492d696d04bc45e6f54b15ca9.json  query-4d76aaf0082a73c59c0f4cb8f8371b53e084dde512dcf5426b1d4e1c5311adba.json  query-8a3f77aed66f5704ac6f8d163dbe056c15685f1a3da6dcf9e18cf991ad1e88c3.json  query-8dedf7ed5e0a0dd320473f47b2e87536e03d88bfad510c430d4609d3d27ea01e.json  query-903da1a1b9cab503fab96d9e229d89a4f4f493d2bc289ff2dd29f266e49618d9.json  query-9e2c4e55c143aecb898bcc90e213aac3f7b5c5626a0cf25d7dd75d117caec5da.json  query-a70ea9440a594c7b5cc4afc4c7dc4000ac3455ab6436f46ea9fb85b5fae0d085.json  query-b38e1e3b7300ac493794338241485caaa4a6157b75946d758fc9062ac7fd4f88.json  query-c0a490d9acde07c7a5ff59143e0a21208301f8839ca15849171dfbe65cec6fa3.json  query-dcb2663a7e0db1a3a709920ec7684db477e7ddddec02bf12a21a6a58c8919d5b.json  query-f7d0ec6cc1458a6ee3f0efc1401251c2908dd2adf4fe9fd97ae07d4d7e56dbb0.json
docs/: chores.md  features.md  tasks.md
migrations/: 20250904160252_user_table.down.sql  20250904160252_user_table.up.sql  20250904160303_file_table.down.sql  20250904160303_file_table.up.sql  20250904160352_user_table.up.sql  20250904160525_file_link.down.sql  20250904160525_file_link.up.sql
src/: configuration.rs  db.rs  lib.rs  main.rs  startup.rs
test_upload_files/: hello.md
tests/: login.rs  (+3 more)
(+39 files in other folders)
