[package]
name = "fileshare"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
serde = { version = "1.0.219",features = ["derive"] }
jsonwebtoken = "9.3.1"
uuid = "1.16.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde","std"] }
dotenv = "0.15.0"
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["full"] }
mime_guess = "2.0.5"
urlencoding = "2.1.3"
aws-config = "1.8.0"
aws-sdk-s3control = "1.84.0"
aws-sdk-s3 = "1.94.0"
bytes = "1.10.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
