[package]
name = "fileshare"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fileshare"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
serde = { version = "1.0.219",features = ["derive"] }
jsonwebtoken = "9.3.1"
tokio = { version = "1.44.2", features = ["full"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde","std"] }
dotenv = "0.15.0"
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["full"] }
mime_guess = "2.0.5"
urlencoding = "2.1.3"
aws-config = "1.8.0"
aws-sdk-s3 = "1.94.0"
bytes = "1.10.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "uuid", "migrate"] }
config = "0.15.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter", "registry"] }
uuid = "1.18.1"
regex = "1.12.2"
redis = { version = "1.0.0-rc.1", features = ["tokio-comp"] }

[dev-dependencies]
reqwest = {version = "0.12.23", features = ["json","multipart"]}
